# veida-gcseg

./: README.md
GC2D/src/: CMakeLists.txt  GC2D.cpp  graphcutAlgorithm.h  stdafx.cpp
GC3D/: final.txt  info.txt
GC3D/src/: CMakeLists.txt  Foot.mha  bit_vector.h  graphcut.cpp  graphcut.h  graphcutAlgorithm.h
GC3Dslicewise/src/: CMakeLists.txt  GC3Dslices.cpp  graphcutAlgorithm.h
seeds/: info.txt  rseeds_idx.txt
seeds/50/: blueseeds.txt  bseeds_idx.txt  final.txt  info.txt  redseeds.txt  rseeds_idx.txt
seeds/60/: blueseeds.txt  bseeds_idx.txt  final.txt  redseeds.txt
